crates/perfgate-sensor/src/snapshots/perfgate_sensor__snapshot_tests__snapshot_aggregated_multi_bench.snap
---
source: crates/perfgate-sensor/src/lib.rs
expression: sensor_report
---
{
  "schema": "sensor.report.v1",
  "tool": {
    "name": "perfgate",
    "version": "0.1.0"
  },
  "run": {
    "started_at": "2024-01-15T10:30:00Z",
    "ended_at": "2024-01-15T10:32:00Z",
    "duration_ms": 120000,
    "capabilities": {
      "baseline": {
        "status": "unavailable"
      }
    }
  },
  "verdict": {
    "status": "warn",
    "counts": {
      "info": 4,
      "warn": 1,
      "error": 0
    },
    "reasons": [
      "wall_ms_warn"
    ]
  },
  "findings": [
    {
      "check_id": "perf.budget",
      "code": "metric_warn",
      "severity": "warn",
      "message": "[bench-a] wall_ms regression: +15.00%",
      "fingerprint": "3ce609dc6bd98bd6fd8fc2a95ec9e175d8ddde3047610880c8287be882d4a710",
      "data": {
        "bench_name": "bench-a"
      }
    }
  ],
  "artifacts": [
    {
      "path": "artifacts/bench-a/perfgate.report.v1.json",
      "type": "perfgate_report"
    },
    {
      "path": "artifacts/bench-b/perfgate.report.v1.json",
      "type": "perfgate_report"
    },
    {
      "path": "artifacts/bench-a/perfgate.run.v1.json",
      "type": "run_receipt"
    },
    {
      "path": "artifacts/bench-b/perfgate.run.v1.json",
      "type": "run_receipt"
    }
  ],
  "data": {
    "summary": {
      "bench_count": 2,
      "fail_count": 0,
      "pass_count": 4,
      "total_count": 5,
      "warn_count": 1
    }
  }
}
