crates/perfgate-sensor/src/snapshots/perfgate_sensor__snapshot_tests__snapshot_error_report.snap
---
source: crates/perfgate-sensor/src/lib.rs
assertion_line: 2078
expression: sensor_report
---
{
  "schema": "sensor.report.v1",
  "tool": {
    "name": "perfgate",
    "version": "0.1.0"
  },
  "run": {
    "started_at": "2024-01-15T10:30:00Z",
    "ended_at": "2024-01-15T10:30:01Z",
    "duration_ms": 1000,
    "capabilities": {
      "baseline": {
        "status": "unavailable"
      },
      "engine": {
        "status": "available"
      }
    }
  },
  "verdict": {
    "status": "fail",
    "counts": {
      "info": 0,
      "warn": 0,
      "error": 1
    },
    "reasons": [
      "tool_error"
    ]
  },
  "findings": [
    {
      "check_id": "tool.runtime",
      "code": "runtime_error",
      "severity": "error",
      "message": "failed to parse config: invalid TOML at line 5",
      "fingerprint": "0317de7f7e8455213856e430fde580b2729f5f77d1baf37f0397bcfd8ddacb2d",
      "data": {
        "error_kind": "parse_error",
        "stage": "config_parse"
      }
    }
  ],
  "data": {
    "summary": {
      "bench_count": 0,
      "fail_count": 1,
      "pass_count": 0,
      "total_count": 1,
      "warn_count": 0
    }
  }
}
